# aes-c

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  aes-c-config.cmake.in  aes-cConfig.cmake.in
.github/workflows/: build-test.yml  check-file-formatting.yml  clang-format.yml  install-test.yml  reformat-clang-format.yml  reformat-files.yml
cmake/: DefaultConfig.cmake  DownloadAndUseMunit.cmake  Munit.cmake  MunitAddTests.cmake  Warnings.cmake
include/ay/: aes.h
include/ay/aes/: hedley.h
scripts/: GetVersionFromFile.py  write-new-version.py
src/: aes-bs.c  aes-bs.h  aes-ni.c  aes-ni.cpp  aes-ni.h  aes.c  dbg.h  inner.h
src/cpu-capability/: CMakeLists.txt  cpu-capability.c  cpu-capability.h
src/cpu-capability/src/: cpu-capability.c
tests/: CMakeLists.txt  aes-bs-tests.c  aes-tests.c  tests.c
tests/install-test/: CMakeLists.txt  main.c
